--- a/core/pom.xml
+++ b/core/pom.xml
@@ -33,6 +33,13 @@
         </plugins>
     </build>
 
+    <!--<repositories>-->
+        <!--<repository>-->
+            <!--<id>jitpack.io</id>-->
+            <!--<url>https://jitpack.io</url>-->
+        <!--</repository>-->
+    <!--</repositories>-->
+
     <dependencyManagement>
         <dependencies>
             <!--
@@ -133,6 +140,28 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
+        </dependency>
+
+        <!--<dependency>-->
+            <!--<groupId>com.github.citiususc</groupId>-->
+            <!--<artifactId>jflap-lib</artifactId>-->
+            <!--<version>1.3</version>-->
+        <!--</dependency>-->
+
+        <dependency>
+            <groupId>Jflap</groupId>
+            <artifactId>Jflap</artifactId>
+            <version>1.7.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/src/main/resources/jflaplib-cli-1.3-bundle.jar</systemPath>
+        </dependency>
+
+
+        <!-- https://mvnrepository.com/artifact/org.dom4j/dom4j -->
+        <dependency>
+            <groupId>org.dom4j</groupId>
+            <artifactId>dom4j</artifactId>
+            <version>2.1.0</version>
         </dependency>
 
     </dependencies>
