--- a/annotations/pom.xml
+++ b/annotations/pom.xml
@@ -40,6 +40,11 @@
             <artifactId>dom4j</artifactId>
             <version>2.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>net.automatalib</groupId>
+            <artifactId>automata-commons-util</artifactId>
+            <version>0.6.0</version>
+        </dependency>
     </dependencies>
     
 </project>
