--- a/generator/pom.xml
+++ b/generator/pom.xml
@@ -68,6 +68,12 @@
             <version>1.9.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.javassist</groupId>
+            <artifactId>javassist</artifactId>
+            <version>3.20.0-GA</version>
+        </dependency>
+
 
     </dependencies>
 
