--- a/annotations-tests/pom.xml
+++ b/annotations-tests/pom.xml
@@ -4,7 +4,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>hansvdlaan.hermielab</groupId>
+    <parent>
+        <groupId>hansvdlaan.hermielab</groupId>
+        <artifactId>hermielab</artifactId>
+        <version>0.1-SNAPSHOT</version>
+    </parent>
     <artifactId>annotations-tests</artifactId>
     <version>0.1-SNAPSHOT</version>
 
